@@ -1,7 +1,8 @@
 plugins {
     id 'java'
     id 'application'
-    id 'com.formkiq.gradle.graalvm-native-plugin' version '1.7.0'
+    id("org.beryx.jlink") version "3.1.3"
+    id "org.gradlex.extra-java-module-info" version "1.13"
 }
 
 group 'com.github.artyomcool'
@@ -15,20 +16,29 @@ dependencies {
     implementation 'org.oxbow:swingbits:1.3.0'
 }
 
+extraJavaModuleInfo {
+    automaticModule("org.oxbow:swingbits", "swingbits")
+}
+
+java {
+    modularity.inferModulePath = true
+}
+
 application {
     mainClass = 'battlefieldexplorer.BattlefieldExplorer'
 }
-nativeImage {
-    mainClassName = 'battlefieldexplorer.BattlefieldExplorer'
-}
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'battlefieldexplorer.BattlefieldExplorer'
-        )
+
+jlink {
+    options = [
+            '--compress=2',
+            '--no-header-files',
+            '--no-man-pages',
+            '--add-modules','jdk.localedata',
+            '--include-locales=en,ru'
+    ]
+
+    launcher {
+        name = 'battlefields'
+        noConsole = true
     }
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
